Bug 369605 - Presets are not marked dirty if the modification is done via the brush-settings.
Summary: Presets are not marked dirty if the modification is done via the brush-settings.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-01 13:43 UTC by wolthera
Modified: 2016-10-18 14:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2016-10-01 13:43:41 UTC
They ARE marked dirty when using the on-canvas HUD or keys.

Reproducible: Always




This might be a fluke again, like how reloading suddenly stopped working for me.
Comment 1 Dmitry Kazakov 2016-10-18 14:50:10 UTC
Git commit aabbafbe25892dd1d33a41bfac1e303a42b497e3 by Dmitry Kazakov.
Committed on 18/10/2016 at 14:44.
Pushed by dkazakov into branch 'master'.

Fix marking presets with Dirty mark when changing presets in the editor

Fixes T3923

M  +4    -3    libs/image/brushengine/kis_locked_properties_proxy.cpp
M  +1    -4    libs/image/brushengine/kis_paintop_preset.cpp
M  +2    -1    libs/ui/kis_paintop_box.cc

http://commits.kde.org/krita/aabbafbe25892dd1d33a41bfac1e303a42b497e3