Fix marking presets with Dirty mark when changing presets in the editor

Fixes T3923
BUG:369605